2011-11-01  Sami Wagiaalla  <swagiaal@redhat.com>

	* pdebuild.xml: Remove org.apache.lucene.
	* buildSDKSource.sh: Update eclipse builder
	and basebuilder tags.
	Add common git repo pointer and pass it to fetchers.
	Prefent find -delete statements from matching directorys ending
	with .jar and .a.
	Remove deletion of features/org.eclipse.equinox.executable.
	* patches/eclipse-removeSkipMapsCheck.patch: Update patch so it
	applies cleanly.

2011-10-31  Sami Wagiaalla  <swagiaal@redhat.com>

	* build.xml: Move running of the initializer to its own
	target, and add a property to prevent running it.

2011-10-03  Sami Wagiaalla  <swagiaal@redhat.com>

	* pdebuild.xml: Do not uninstall the initializer.
	Remove all empty metadata directories.

2011-08-23  Sami Wagiaalla  <swagiaal@redhat.com>

	* dependencies.properties: Remove org.apache.lucene entry.
	* build.xml: apply remove-lucene-dependency.patch patch.

2011-08-22  Sami Wagiaalla  <swagiaal@redhat.com> 

	* build.xml: Set buildDirectory relative to plugins directory.

2011-08-18  Sami Wagiaalla  <swagiaal@redhat.com>

	* pdebuild.xml: Created new target copyDeps.
	Pass property copyfiles to Symlink tasks.
	* task-src/org/eclipse/linuxtools/eclipsebuild/SymlinkJars.java: New.
	* task-src/org/eclipse/linuxtools/eclipsebuild/SymlinkInstalledOSGiJars.java:
	Extend SymlinkJars.
	* task-src/org/eclipse/linuxtools/eclipsebuild/SymlinkOSGiJars.java: Ditto.
	* task-src/org/eclipse/linuxtools/eclipsebuild/SymlinkNonOSGiJars.java: Ditto.

2011-08-09  Niels Thykier  <niels@thykier.net>

	Bug #322271

	* pdebuild/eclipse-pdebuild.sh: Pass JVM arguments directly to the VM and
	pass -data to avoid using the user's real workspace.

2011-08-05  Niels Thykier  <niels@thykier.net>

	* build.xml: Re-enabled four patches for adding extra architectures to eclipse.
	* patches/donotstorebuildlogsinfiles.patch: Refreshed to apply cleanly.
	* patches/eclipse-add-archs-executable.patch: Ditto