@@ -1,9 +1,9 @@
 #baseLocation=${basedir}/bootstrap
 # Note:  this is also in pdebuild.properties
-buildId=I20110613-1736
-buildTag=I20110613-1736
-label=3.7.0
-testsBuildLabel=3.7.0
+buildId=R3_7_1
+buildTag=R3_7_1
+label=3.7.1
+testsBuildLabel=3.7.1
 testframework=org.eclipse.test_3.3.100
 p2.director.version=${testsBuildLabel}
 testsBuildId=v20100211
