@@ -2,9 +2,9 @@ buildArch=x86
 ws=gtk
 os=linux
 
-buildId=3.7.0
-buildTag=3.7.0
-label=3.7.0
+buildId=R3_7_1
+buildTag=R3_7_1
+label=3.7.1
 bootclasspath=/usr/lib/jvm/java/jre/lib/rt.jar:/usr/lib/jvm/java/jre/lib/jce.jar:/usr/lib/jvm/default-java/jre/lib/rt.jar:/usr/lib/jvm/default-java/jre/lib/jce.jar:/usr/lib64/jvm/java/jre/lib/rt.jar:/usr/lib64/jvm/java/jre/lib/jce.jar
 #build.compiler=org.eclipse.jdt.core.JDTCompilerAdapter
 
